test_suite/tests/ui/with-variant/skip_ser_struct_field_if.stderr
error: variant `Struct` cannot have both #[serde(serialize_with)] and a field `f1` marked with #[serde(skip_serializing_if)]
  --> $DIR/skip_ser_struct_field_if.rs:12:10
   |
12 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

